welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: identifier expected but string literal found.
var x: String ==""
                ^